k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: generator-simulator
  namespace: generator-simulator
  labels:
    app: generator-simulator
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: generator-simulator
