k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: generator-simulator
  namespace: generator-simulator
  labels:
    app: generator-simulator
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: gen-simulator.awsgenerico.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: generator-simulator
            port:
              number: 3000
